Fixed a bug where the overflow gradients on the scorecard page was blocking the user from clicking on elements below them

--- a/app/scorecard/scorecard.css
+++ b/app/scorecard/scorecard.css
@@ -102,6 +102,7 @@
 	left: 0;
 	z-index: 10;
 	display: none;
+	pointer-events: none;
 }
 
 .gradient-bottom {
@@ -115,4 +116,5 @@
 	top: calc(100vh - 2 * (100vw / 6) - 1px);
 	left: 0;
 	z-index: 10;
+	pointer-events: none;
 }
